--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,86 @@
-absl-py==0.13.0
+absl-py @ file:///C:/ci/absl-py_1623867338309/work
+aiohttp @ file:///C:/ci/aiohttp_1637857239634/work
+aiosignal @ file:///tmp/build/80754af9/aiosignal_1637843061372/work
 astor==0.8.1
-bokeh==2.3.3
-Bottleneck==1.3.2
-cached-property==1.5.2
-certifi==2021.5.30
-charset-normalizer==2.0.4
-click==8.0.1
-cloudpickle==1.6.0
-colorama==0.4.4
-coverage==5.5
-cycler==0.10.0
-Cython==0.29.24
-cytoolz==0.11.0
-dask==2021.8.1
-decorator==4.4.2
-distributed==2021.8.1
-findspark==1.4.2
-fsspec==2021.7.0
-gast==0.5.1
-grpcio==1.36.1
+astunparse==1.6.3
+async-timeout @ file:///tmp/build/80754af9/async-timeout_1637851218186/work
+asynctest==0.13.0
+attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
+blinker==1.4
+brotlipy==0.7.0
+cachetools @ file:///tmp/build/80754af9/cachetools_1619597386817/work
+certifi==2021.10.8
+cffi @ file:///C:/ci/cffi_1636542104204/work
+charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+click==8.0.3
+cryptography @ file:///C:/ci/cryptography_1633502396740/work
+cycler==0.11.0
+flatbuffers==2.0
+fonttools==4.28.3
+frozenlist @ file:///C:/ci/frozenlist_1637767267867/work
+gast==0.3.3
+google-auth @ file:///tmp/build/80754af9/google-auth_1626320605116/work
+google-auth-oauthlib @ file:///tmp/build/80754af9/google-auth-oauthlib_1617120569401/work
+google-pasta @ file:///Users/ktietz/demo/mc3/conda-bld/google-pasta_1630577991354/work
+grpcio @ file:///C:/ci/grpcio_1637590993074/work
 h5py==2.10.0
-HeapDict==1.0.1
-idna==3.2
-importlib-metadata==3.10.0
-Jinja2==3.0.1
-joblib==1.0.1
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-locket==0.2.1
-Markdown==3.3.4
-MarkupSafe==2.0.1
-matplotlib==3.4.2
-mkl-fft==1.3.0
-mkl-random==1.2.2
+idna @ file:///tmp/build/80754af9/idna_1637925883363/work
+importlib-metadata @ file:///C:/ci/importlib-metadata_1638543113403/work
+joblib==1.1.0
+keras==2.7.0
+Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
+Keras-Preprocessing @ file:///tmp/build/80754af9/keras-preprocessing_1612283640596/work
+kiwisolver==1.3.2
+libclang==12.0.0
+Markdown @ file:///C:/ci/markdown_1614364005059/work
+matplotlib==3.5.1
+mkl-fft==1.3.1
+mkl-random @ file:///C:/ci/mkl_random_1626186163140/work
 mkl-service==2.4.0
-mock==4.0.3
-msgpack==1.0.2
-networkx==2.6.2
-numexpr==2.7.3
-numpy==1.20.3
-olefile==0.46
-packaging==21.0
-pandas==1.3.1
-partd==1.2.0
-patsy==0.5.1
-Pillow==8.3.1
-pip==21.2.2
-plotly==4.3.0
+multidict @ file:///C:/ci/multidict_1607367865052/work
+numexpr==2.8.1
+numpy @ file:///C:/ci/numpy_and_numpy_base_1634106873805/work
+oauthlib @ file:///tmp/build/80754af9/oauthlib_1623060228408/work
+opt-einsum @ file:///tmp/build/80754af9/opt_einsum_1621500238896/work
+packaging==21.3
+pandas==1.3.5
+Pillow==8.4.0
+plotly==5.4.0
 protobuf==3.17.2
 psutil==5.8.0
-py4j==0.10.7
-pydantic==1.8.2
-pymannkendall==1.4.2
-pymongo==3.12.0
-pyparsing==2.4.7
+pyasn1 @ file:///Users/ktietz/demo/mc3/conda-bld/pyasn1_1629708007385/work
+pyasn1-modules==0.2.8
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+PyJWT @ file:///C:/ci/pyjwt_1619651810943/work
+pymongo==4.0.1
+pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1635333100036/work
+pyparsing==3.0.6
 pyreadline==2.1
-pyspark==2.4.0
+PySocks @ file:///C:/ci/pysocks_1594394709107/work
 python-dateutil==2.8.2
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.26.0
-retrying==1.3.3
-scikit-fuzzy==0.4.2
-scikit-learn==0.24.2
-scipy==1.6.2
-setuptools==52.0.0.post20210125
-six==1.16.0
-sortedcontainers==2.4.0
-statsmodels==0.12.2
+pytz==2021.3
+requests @ file:///tmp/build/80754af9/requests_1629994808627/work
+requests-oauthlib==1.3.0
+rsa @ file:///tmp/build/80754af9/rsa_1614366226499/work
+scikit-learn==1.0.1
+scipy @ file:///C:/ci/scipy_1630606897162/work
+six @ file:///tmp/build/80754af9/six_1623709665295/work
+sklearn==0.0
 tables==3.6.1
-tblib==1.7.0
-tensorboard==1.14.0
-tensorflow==1.14.0
-tensorflow-estimator==1.14.0
+tenacity==8.0.1
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.6.0
+tensorflow==2.7.0
+tensorflow-estimator==2.7.0
+tensorflow-io-gcs-filesystem==0.22.0
 termcolor==1.1.0
-threadpoolctl==2.2.0
-toolz==0.11.1
-tornado==6.1
-typing-extensions==3.10.0.0
-urllib3==1.26.6
-Werkzeug==1.0.1
-wheel==0.36.2
+threadpoolctl==3.0.0
+typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
+urllib3==1.26.7
+Werkzeug @ file:///tmp/build/80754af9/werkzeug_1635505089296/work
+win-inet-pton @ file:///C:/ci/win_inet_pton_1605306165655/work
 wincertstore==0.2
-wrapt==1.12.1
-zict==2.0.0
-zipp==3.5.0
+wrapt @ file:///C:/ci/wrapt_1638415942355/work
+yarl @ file:///C:/ci/yarl_1606940114600/work
+zipp @ file:///tmp/build/80754af9/zipp_1633618647012/work
